--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "@fortawesome/fontawesome-free": "^5.10.2",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
+    "compat": "^1.0.4",
     "core-js": "^3.2.1",
+    "datatables.net": "^1.10.19",
+    "datatables.net-dt": "^1.10.19",
     "hamburgers": "^1.1.3",
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^5.1.1",
     "ngx-toastr": "^10.1.0",
     "popper.js": "^1.15.0",
-    "rxjs": "~6.5.2",
+    "rxjs": "^6.5.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
@@ -38,8 +41,10 @@
     "@angular/cli": "^8.3.0",
     "@angular/compiler-cli": "^8.2.3",
     "@angular/language-service": "~8.2.3",
+    "@types/datatables.net": "^1.10.17",
     "@types/jasmine": "~3.4.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.31",
     "@types/node": "~12.7.2",
     "codelyzer": "^5.0.1",
     "jasmine-core": "~3.4.0",
