--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.3",
+    "@angular/animations": "^8.2.4",
+    "@angular/cdk": "^8.1.4",
     "@angular/common": "~8.2.3",
     "@angular/compiler": "~8.2.3",
     "@angular/core": "~8.2.3",
     "@angular/forms": "~8.2.3",
+    "@angular/material": "^8.1.4",
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
     "@angular/router": "~8.2.3",
     "@auth0/angular-jwt": "^3.0.0",
     "@fortawesome/fontawesome-free": "^5.10.2",
+    "angular-datatables": "^8.0.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "compat": "^1.0.4",
