--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ngx-toastr": "^10.1.0",
     "popper.js": "^1.15.0",
     "rxjs": "^6.5.2",
+    "sweetalert2": "^8.17.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
