--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@angular/cdk": "^8.1.4",
     "@angular/common": "~8.2.3",
     "@angular/compiler": "~8.2.3",
-    "@angular/core": "~8.2.3",
+    "@angular/core": "^8.2.4",
     "@angular/forms": "~8.2.3",
     "@angular/material": "^8.1.4",
     "@angular/platform-browser": "~8.2.3",
@@ -32,6 +32,7 @@
     "datatables.net-dt": "^1.10.19",
     "hamburgers": "^1.1.3",
     "jquery": "^3.4.1",
+    "jspdf": "^1.5.3",
     "ngx-bootstrap": "^5.1.1",
     "ngx-toastr": "^10.1.0",
     "popper.js": "^1.15.0",
@@ -49,6 +50,7 @@
     "@types/jasmine": "~3.4.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.31",
+    "@types/jspdf": "^1.3.1",
     "@types/node": "~12.7.2",
     "codelyzer": "^5.0.1",
     "jasmine-core": "~3.4.0",
