--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "hamburgers": "^1.1.3",
     "jquery": "^3.4.1",
     "jspdf": "^1.5.3",
+    "ng2-pdf-viewer": "^5.3.4",
     "ngx-bootstrap": "^5.1.1",
     "ngx-toastr": "^10.1.0",
     "popper.js": "^1.15.0",
